mq/environments/base/mq-quarkus-tls-app/service.yaml
---
# Source: mq-quarkus-tls-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq-quarkus-tls-app
  labels:
    app.kubernetes.io/name: mq-quarkus-tls-app
    app.kubernetes.io/instance: mq-quarkus-tls-app
    app: mq-quarkus-tls-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mq-quarkus-tls-app
    app.kubernetes.io/instance: mq-quarkus-tls-app
